# aoc-mcp-server-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
src/: main.rs  tools.rs
